* Fixed #4339 - I did not use stimut's patch (but thanks a lot, I wouldn't even   have started looking into it without it!), but solved it a bit differently by   moving the state saving into the destructor, and removing the tab in question   manually afterwards. * Automatic whitespace cleanup.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@35727 a95241bf-73f2-0310-859d-f6bbb57e9c96